--- a/css/style.css
+++ b/css/style.css
@@ -45,12 +45,22 @@ pre code:hover {
   font-weight: bold;
 }
 
+header .container {
+  padding: 20px;
+}
+header .title {
+  font-size: 1.5em;
+}
 /* FLEX */
+header .container,
 main {
   align-items: self-start;
   flex-wrap: wrap;
   display: flex;
 }
+header .container .box,
+header .container .card,
+main .box,
 main .card {
   flex: 1 1 auto;
 }
