fix: minor ui fix

--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ header .title {
   padding: 0.2em 0.6em 0.3em;
   font-size: 75%;
   line-height: 1;
+  color: #efefef;
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline;
